src/test/ui/resolve/suggest-path-instead-of-mod-dot-item.stderr
error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:17:5
   |
LL |     a.I
   |     ^--
   |     |
   |     help: use the path separator to refer to an item: `a::I`

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:22:5
   |
LL |     a.g()
   |     ^--
   |     |
   |     help: use the path separator to refer to an item: `a::g`

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:27:5
   |
LL |     a.b.J
   |     ^--
   |     |
   |     help: use the path separator to refer to an item: `a::b`

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:32:5
   |
LL |     a::b.J
   |     ^^^^
help: a constant with a similar name exists
   |
LL |     a::I.J
   |        ^
help: use the path separator to refer to an item
   |
LL |     a::b::J
   |

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:37:5
   |
LL |     a.b.f();
   |     ^--
   |     |
   |     help: use the path separator to refer to an item: `a::b`

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:40:12
   |
LL |     v.push(a::b);
   |            ^^^-
   |               |
   |               help: a constant with a similar name exists: `I`

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:45:5
   |
LL |     a::b.f()
   |     ^^^^
help: a constant with a similar name exists
   |
LL |     a::I.f()
   |        ^
help: use the path separator to refer to an item
   |
LL |     a::b::f()
   |     ^^^^^^^

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:50:5
   |
LL |     a::b
   |     ^^^-
   |        |
   |        help: a constant with a similar name exists: `I`

error[E0423]: expected function, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:55:5
   |
LL |     a::b()
   |     ^^^-
   |        |
   |        help: a constant with a similar name exists: `I`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0423`.
